HAL CODE/.metadata/.plugins/org.eclipse.cdt.ui/all led hal.build.log
20:14:54 **** Incremental Build of configuration Debug for project all led hal ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:100:11: error: too few arguments to function 'HAL_GPIO_WritePin'
  100 |           HAL_GPIO_WritePin(GPIOD, GPIO_PIN_12 | GPIO_PIN_12 | GPIO_PIN_13 | GPIO_PIN_14 | GPIO_PIN_14 | GPIO_PIN_15 | GPIO_PIN_SET);
      |           ^~~~~~~~~~~~~~~~~
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:279,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio.h:235:6: note: declared here
  235 | void HAL_GPIO_WritePin(GPIO_TypeDef* GPIOx, uint16_t GPIO_Pin, GPIO_PinState PinState);
      |      ^~~~~~~~~~~~~~~~~
../Core/Src/main.c:103:11: error: too few arguments to function 'HAL_GPIO_WritePin'
  103 |           HAL_GPIO_WritePin(GPIOD, GPIO_PIN_12 | GPIO_PIN_13 | GPIO_PIN_13 | GPIO_PIN_14 | GPIO_PIN_14 | GPIO_PIN_15 | GPIO_PIN_RESET);
      |           ^~~~~~~~~~~~~~~~~
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio.h:235:6: note: declared here
  235 | void HAL_GPIO_WritePin(GPIO_TypeDef* GPIOx, uint16_t GPIO_Pin, GPIO_PinState PinState);
      |      ^~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

20:14:54 Build Failed. 3 errors, 0 warnings. (took 266ms)

